Update config to make EUREKA host configurable for dockerized envs

--- a/account-service-nest-nest.properties
+++ b/account-service-nest-nest.properties
@@ -6,5 +6,5 @@ logging.level.org.springframework.web=TRACE
 
 server.port=8085
 spring.application.name=account-service-nest
-eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.client.serviceUrl.defaultZone=${EUREKA_HOST:http://localhost:8761/eureka}
 eureka.instance.prefer-ip-address=true
