--- a/account-service-ing-ing.properties
+++ b/account-service-ing-ing.properties
@@ -6,5 +6,5 @@ logging.level.org.springframework.web=TRACE
 
 server.port=8084
 spring.application.name=account-service-ing
-eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.client.serviceUrl.defaultZone=${EUREKA_HOST:http://localhost:8761/eureka}
 eureka.instance.prefer-ip-address=true
