--- a/payment-service.properties
+++ b/payment-service.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:h2:mem:testdb8083
 logging.level.org.springframework.web=TRACE
 
 # Eureka config
-eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.client.serviceUrl.defaultZone=${EUREKA_HOST:http://localhost:8761/eureka}
 eureka.instance.prefer-ip-address=true
 
 # Kafka server
